// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueueRedisRepository.scanQueues — characterization > answers an empty summary for a queue with no keys 1`] = `
[
  {
    "activeGroupCount": 0,
    "blockedGroupCount": 0,
    "displayName": "qempty",
    "dlqCount": 0,
    "groups": [],
    "name": "qempty",
    "parkedGroupCount": 0,
    "pendingGroupCount": 0,
    "totalPendingJobs": 0,
  },
]
`;

exports[`QueueRedisRepository.scanQueues — characterization > reads the published total-pending counter when present, clamping negatives 1`] = `
[
  {
    "activeGroupCount": 2,
    "blockedGroupCount": 3,
    "displayName": "qa",
    "dlqCount": 2,
    "groups": [
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g1",
        "hasActiveJob": false,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 200,
        "oldestJobMs": 100,
        "pendingJobs": 2,
        "pipelineName": "g1",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 10,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": "boom",
        "errorStack": "at x",
        "errorTimestamp": 123.5,
        "groupId": "g4",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 500,
        "oldestJobMs": 500,
        "pendingJobs": 1,
        "pipelineName": "g4",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 40,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g3",
        "hasActiveJob": false,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": null,
        "jobType": null,
        "newestJobMs": 400,
        "oldestJobMs": 400,
        "pendingJobs": 1,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 30,
      },
      {
        "activeJobId": "j3",
        "activeKeyTtlSec": 30,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g2",
        "hasActiveJob": true,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 300,
        "oldestJobMs": 300,
        "pendingJobs": 1,
        "pipelineName": "g2",
        "processingDurationMs": null,
        "retryCount": 3,
        "score": 20,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "b2",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 600,
        "oldestJobMs": 600,
        "pendingJobs": 1,
        "pipelineName": "b2",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 0,
      },
      {
        "activeJobId": "jx",
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g5",
        "hasActiveJob": true,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": null,
        "jobType": null,
        "newestJobMs": null,
        "oldestJobMs": null,
        "pendingJobs": 0,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 50,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": "stale",
        "errorStack": "",
        "errorTimestamp": null,
        "groupId": "b1",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": true,
        "jobName": null,
        "jobType": null,
        "newestJobMs": null,
        "oldestJobMs": null,
        "pendingJobs": 0,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 0,
      },
    ],
    "name": "{qa}",
    "parkedGroupCount": 3,
    "pendingGroupCount": 5,
    "totalPendingJobs": 42,
  },
  {
    "activeGroupCount": 0,
    "blockedGroupCount": 0,
    "displayName": "qb",
    "dlqCount": 0,
    "groups": [
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "n1",
        "hasActiveJob": false,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 1,
        "oldestJobMs": 1,
        "pendingJobs": 1,
        "pipelineName": "n1",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 1,
      },
    ],
    "name": "qb",
    "parkedGroupCount": 0,
    "pendingGroupCount": 1,
    "totalPendingJobs": 0,
  },
]
`;

exports[`QueueRedisRepository.scanQueues — characterization > samples a limited page from both ends and caps the blocked sample 1`] = `
[
  {
    "activeGroupCount": 2,
    "blockedGroupCount": 3,
    "displayName": "qa",
    "dlqCount": 2,
    "groups": [
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g1",
        "hasActiveJob": false,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 200,
        "oldestJobMs": 100,
        "pendingJobs": 2,
        "pipelineName": "g1",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 10,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": "boom",
        "errorStack": "at x",
        "errorTimestamp": 123.5,
        "groupId": "g4",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 500,
        "oldestJobMs": 500,
        "pendingJobs": 1,
        "pipelineName": "g4",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 40,
      },
      {
        "activeJobId": "j3",
        "activeKeyTtlSec": 30,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g2",
        "hasActiveJob": true,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 300,
        "oldestJobMs": 300,
        "pendingJobs": 1,
        "pipelineName": "g2",
        "processingDurationMs": null,
        "retryCount": 3,
        "score": 20,
      },
      {
        "activeJobId": "jx",
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g5",
        "hasActiveJob": true,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": null,
        "jobType": null,
        "newestJobMs": null,
        "oldestJobMs": null,
        "pendingJobs": 0,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 50,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": "stale",
        "errorStack": "",
        "errorTimestamp": null,
        "groupId": "b1",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": true,
        "jobName": null,
        "jobType": null,
        "newestJobMs": null,
        "oldestJobMs": null,
        "pendingJobs": 0,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 0,
      },
    ],
    "name": "{qa}",
    "parkedGroupCount": 3,
    "pendingGroupCount": 5,
    "totalPendingJobs": 4,
  },
]
`;

exports[`QueueRedisRepository.scanQueues — characterization > summarises ready, blocked, parked and dlq state with per-group detail 1`] = `
[
  {
    "activeGroupCount": 2,
    "blockedGroupCount": 3,
    "displayName": "qa",
    "dlqCount": 2,
    "groups": [
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g1",
        "hasActiveJob": false,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 200,
        "oldestJobMs": 100,
        "pendingJobs": 2,
        "pipelineName": "g1",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 10,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": "boom",
        "errorStack": "at x",
        "errorTimestamp": 123.5,
        "groupId": "g4",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 500,
        "oldestJobMs": 500,
        "pendingJobs": 1,
        "pipelineName": "g4",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 40,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g3",
        "hasActiveJob": false,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": null,
        "jobType": null,
        "newestJobMs": 400,
        "oldestJobMs": 400,
        "pendingJobs": 1,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 30,
      },
      {
        "activeJobId": "j3",
        "activeKeyTtlSec": 30,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g2",
        "hasActiveJob": true,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 300,
        "oldestJobMs": 300,
        "pendingJobs": 1,
        "pipelineName": "g2",
        "processingDurationMs": null,
        "retryCount": 3,
        "score": 20,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "b2",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": false,
        "jobName": "handle",
        "jobType": "project",
        "newestJobMs": 600,
        "oldestJobMs": 600,
        "pendingJobs": 1,
        "pipelineName": "b2",
        "processingDurationMs": null,
        "retryCount": null,
        "score": 0,
      },
      {
        "activeJobId": "jx",
        "activeKeyTtlSec": null,
        "errorMessage": null,
        "errorStack": null,
        "errorTimestamp": null,
        "groupId": "g5",
        "hasActiveJob": true,
        "isBlocked": false,
        "isStaleBlock": false,
        "jobName": null,
        "jobType": null,
        "newestJobMs": null,
        "oldestJobMs": null,
        "pendingJobs": 0,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 50,
      },
      {
        "activeJobId": null,
        "activeKeyTtlSec": null,
        "errorMessage": "stale",
        "errorStack": "",
        "errorTimestamp": null,
        "groupId": "b1",
        "hasActiveJob": false,
        "isBlocked": true,
        "isStaleBlock": true,
        "jobName": null,
        "jobType": null,
        "newestJobMs": null,
        "oldestJobMs": null,
        "pendingJobs": 0,
        "pipelineName": null,
        "processingDurationMs": null,
        "retryCount": null,
        "score": 0,
      },
    ],
    "name": "{qa}",
    "parkedGroupCount": 3,
    "pendingGroupCount": 5,
    "totalPendingJobs": 6,
  },
]
`;
